updates CNAME and package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "johnnycopes-portfolio",
+  "name": "johnnycopes",
   "version": "1.0.0",
-  "description": "A new version of my personal portfolio built from scratch",
+  "description": "My personal portfolio site",
   "main": "js/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
