--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "js/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "scss --watch scss/main.scss:css/styles.css"
+    "watch": "sass --watch scss/main.scss:css/styles.css"
   },
   "author": "John Coppola",
   "license": "ISC"
